# groundgrid_ros2

./: CMakeLists.txt  README.md  groundgrid_component.xml  package.xml
cfg/: groundgrid_config.yaml
include/groundgrid/: GroundGrid.h  GroundGridConfig.h  GroundGridFwd.h  GroundSegmentation.h
include/velodyne_pointcloud/: point_types.h
launch/: ground_grid.launch.py
rviz/: groundgrid2.rviz
src/: GroundGrid.cpp  GroundGridNode.cpp  GroundSegmentation.cpp
